[package]
name = "adventofcode-2023"
version = "0.1.0"
authors = []
rust-version = "1.74"
edition = "2021"

[dependencies]

[lib]
name = "aoc"
path = "./lib/rust/lib.rs"

[[bin]]
name = "day-01-part-1-paullgdc"
path = "./day-01/part-1/paullgdc.rs"

[[bin]]
name = "day-01-part-2-paullgdc"
path = "./day-01/part-2/paullgdc.rs"

[[bin]]
name = "day-01-part-1-giltho"
path = "./day-01/part-1/giltho.rs"

[[bin]]
name = "day-01-part-2-giltho"
path = "./day-01/part-2/giltho.rs"

[[bin]]
name = "day-01-part-1-enizor"
path = "./day-01/part-1/enizor.rs"

[[bin]]
name = "day-01-part-2-enizor"
path = "./day-01/part-2/enizor.rs"

[[bin]]
name = "day-02-part-1-enizor"
path = "./day-02/part-1/enizor.rs"

[[bin]]
name = "day-02-part-2-enizor"
path = "./day-02/part-2/enizor.rs"

[[bin]]
name = "day-02-part-1-giltho"
path = "./day-02/part-1/giltho.rs"

[[bin]]
name = "day-02-part-2-giltho"
path = "./day-02/part-2/giltho.rs"

[[bin]]
name = "day-01-part-1-thomren"
path = "./day-01/part-1/thomren.rs"

[[bin]]
name = "day-01-part-2-thomren"
path = "./day-01/part-2/thomren.rs"

[[bin]]
name = "day-03-part-1-giltho"
path = "./day-03/part-1/giltho.rs"

[[bin]]
name = "day-03-part-2-giltho"
path = "./day-03/part-2/giltho.rs"

[[bin]]
name = "day-03-part-1-enizor"
path = "./day-03/part-1/enizor.rs"

[[bin]]
name = "day-03-part-2-enizor"
path = "./day-03/part-2/enizor.rs"

[[bin]]
name = "day-02-part-1-paullgdc"
path = "./day-02/part-1/paullgdc.rs"

[[bin]]
name = "day-02-part-2-paullgdc"
path = "./day-02/part-2/paullgdc.rs"

[[bin]]
name = "day-03-part-1-paullgdc"
path = "./day-03/part-1/paullgdc.rs"

[[bin]]
name = "day-03-part-2-paullgdc"
path = "./day-03/part-2/paullgdc.rs"

[[bin]]
name = "day-04-part-1-paullgdc"
path = "./day-04/part-1/paullgdc.rs"

[[bin]]
name = "day-04-part-2-paullgdc"
path = "./day-04/part-2/paullgdc.rs"

[[bin]]
name = "day-04-part-1-giltho"
path = "./day-04/part-1/giltho.rs"

[[bin]]
name = "day-04-part-2-giltho"
path = "./day-04/part-2/giltho.rs"

[[bin]]
name = "day-01-part-1-youyoun"
path = "./day-01/part-1/youyoun.rs"

[[bin]]
name = "day-01-part-2-youyoun"
path = "./day-01/part-2/youyoun.rs"
