[package]
name = "adventofcode-2023"
version = "0.1.0"
authors = []
rust-version = "1.74"
edition = "2021"

[dependencies]
num = "0.4.1"

[lib]
name = "aoc"
path = "./lib/rust/lib.rs"

[[bin]]
name = "day-01-part-1-paullgdc"
path = "./day-01/part-1/paullgdc.rs"

[[bin]]
name = "day-01-part-2-paullgdc"
path = "./day-01/part-2/paullgdc.rs"

[[bin]]
name = "day-01-part-1-giltho"
path = "./day-01/part-1/giltho.rs"

[[bin]]
name = "day-01-part-2-giltho"
path = "./day-01/part-2/giltho.rs"

[[bin]]
name = "day-01-part-1-enizor"
path = "./day-01/part-1/enizor.rs"

[[bin]]
name = "day-01-part-2-enizor"
path = "./day-01/part-2/enizor.rs"

[[bin]]
name = "day-02-part-1-enizor"
path = "./day-02/part-1/enizor.rs"

[[bin]]
name = "day-02-part-2-enizor"
path = "./day-02/part-2/enizor.rs"

[[bin]]
name = "day-02-part-1-giltho"
path = "./day-02/part-1/giltho.rs"

[[bin]]
name = "day-02-part-2-giltho"
path = "./day-02/part-2/giltho.rs"

[[bin]]
name = "day-01-part-1-thomren"
path = "./day-01/part-1/thomren.rs"

[[bin]]
name = "day-01-part-2-thomren"
path = "./day-01/part-2/thomren.rs"

[[bin]]
name = "day-03-part-1-giltho"
path = "./day-03/part-1/giltho.rs"

[[bin]]
name = "day-03-part-2-giltho"
path = "./day-03/part-2/giltho.rs"

[[bin]]
name = "day-03-part-1-enizor"
path = "./day-03/part-1/enizor.rs"

[[bin]]
name = "day-03-part-2-enizor"
path = "./day-03/part-2/enizor.rs"

[[bin]]
name = "day-02-part-1-paullgdc"
path = "./day-02/part-1/paullgdc.rs"

[[bin]]
name = "day-02-part-2-paullgdc"
path = "./day-02/part-2/paullgdc.rs"

[[bin]]
name = "day-03-part-1-paullgdc"
path = "./day-03/part-1/paullgdc.rs"

[[bin]]
name = "day-03-part-2-paullgdc"
path = "./day-03/part-2/paullgdc.rs"

[[bin]]
name = "day-04-part-1-paullgdc"
path = "./day-04/part-1/paullgdc.rs"

[[bin]]
name = "day-04-part-2-paullgdc"
path = "./day-04/part-2/paullgdc.rs"

[[bin]]
name = "day-04-part-1-giltho"
path = "./day-04/part-1/giltho.rs"

[[bin]]
name = "day-04-part-2-giltho"
path = "./day-04/part-2/giltho.rs"

[[bin]]
name = "day-02-part-1-youyoun"
path = "./day-02/part-1/youyoun.rs"

[[bin]]
name = "day-02-part-2-youyoun"
path = "./day-02/part-2/youyoun.rs"

[[bin]]
name = "day-01-part-1-youyoun"
path = "./day-01/part-1/youyoun.rs"

[[bin]]
name = "day-01-part-2-youyoun"
path = "./day-01/part-2/youyoun.rs"

[[bin]]
name = "day-04-part-1-enizor"
path = "./day-04/part-1/enizor.rs"

[[bin]]
name = "day-04-part-2-enizor"
path = "./day-04/part-2/enizor.rs"

[[bin]]
name = "day-04-part-1-thomren"
path = "./day-04/part-1/thomren.rs"

[[bin]]
name = "day-04-part-2-thomren"
path = "./day-04/part-2/thomren.rs"

[[bin]]
name = "day-05-part-1-enizor"
path = "./day-05/part-1/enizor.rs"

[[bin]]
name = "day-05-part-2-enizor"
path = "./day-05/part-2/enizor.rs"

[[bin]]
name = "day-05-part-1-giltho"
path = "./day-05/part-1/giltho.rs"

[[bin]]
name = "day-05-part-2-giltho"
path = "./day-05/part-2/giltho.rs"

[[bin]]
name = "day-05-part-1-paullgdc"
path = "./day-05/part-1/paullgdc.rs"

[[bin]]
name = "day-05-part-2-paullgdc"
path = "./day-05/part-2/paullgdc.rs"

[[bin]]
name = "day-07-part-1-thomren"
path = "./day-07/part-1/thomren.rs"

[[bin]]
name = "day-07-part-2-thomren"
path = "./day-07/part-2/thomren.rs"

[[bin]]
name = "day-03-part-1-youyoun"
path = "./day-03/part-1/youyoun.rs"

[[bin]]
name = "day-03-part-2-youyoun"
path = "./day-03/part-2/youyoun.rs"
[[bin]]
name = "day-06-part-1-giltho"
path = "./day-06/part-1/giltho.rs"

[[bin]]
name = "day-06-part-2-giltho"
path = "./day-06/part-2/giltho.rs"

[[bin]]
name = "day-06-part-1-enizor"
path = "./day-06/part-1/enizor.rs"

[[bin]]
name = "day-06-part-2-enizor"
path = "./day-06/part-2/enizor.rs"

[[bin]]
name = "day-06-part-1-paullgdc"
path = "./day-06/part-1/paullgdc.rs"

[[bin]]
name = "day-06-part-2-paullgdc"
path = "./day-06/part-2/paullgdc.rs"

[[bin]]
name = "day-04-part-1-youyoun"
path = "./day-04/part-1/youyoun.rs"

[[bin]]
name = "day-04-part-2-youyoun"
path = "./day-04/part-2/youyoun.rs"

[[bin]]
name = "day-09-part-1-thomren"
path = "./day-09/part-1/thomren.rs"

[[bin]]
name = "day-09-part-2-thomren"
path = "./day-09/part-2/thomren.rs"

[[bin]]
name = "day-07-part-1-paullgdc"
path = "./day-07/part-1/paullgdc.rs"

[[bin]]
name = "day-07-part-2-paullgdc"
path = "./day-07/part-2/paullgdc.rs"

[[bin]]
name = "day-07-part-1-giltho"
path = "./day-07/part-1/giltho.rs"

[[bin]]
name = "day-07-part-2-giltho"
path = "./day-07/part-2/giltho.rs"

[[bin]]
name = "day-07-part-1-enizor"
path = "./day-07/part-1/enizor.rs"

[[bin]]
name = "day-07-part-2-enizor"
path = "./day-07/part-2/enizor.rs"

[[bin]]
name = "day-08-part-1-enizor"
path = "./day-08/part-1/enizor.rs"

[[bin]]
name = "day-08-part-2-enizor"
path = "./day-08/part-2/enizor.rs"

[[bin]]
name = "day-08-part-1-giltho"
path = "./day-08/part-1/giltho.rs"

[[bin]]
name = "day-08-part-2-giltho"
path = "./day-08/part-2/giltho.rs"

[[bin]]

name = "day-09-part-1-giltho"
path = "./day-09/part-1/giltho.rs"

[[bin]]
name = "day-09-part-2-giltho"
path = "./day-09/part-2/giltho.rs"

[[bin]]
name = "day-09-part-1-enizor"
path = "./day-09/part-1/enizor.rs"

[[bin]]
name = "day-09-part-2-enizor"
path = "./day-09/part-2/enizor.rs"

[[bin]]
name = "day-05-part-1-youyoun"
path = "./day-05/part-1/youyoun.rs"

[[bin]]
name = "day-05-part-2-youyoun"
path = "./day-05/part-2/youyoun.rs"

[[bin]]
name = "day-06-part-1-youyoun"
path = "./day-06/part-1/youyoun.rs"

[[bin]]
name = "day-06-part-2-youyoun"
path = "./day-06/part-2/youyoun.rs"

[[bin]]
name = "day-08-part-1-paullgdc"
path = "./day-08/part-1/paullgdc.rs"

[[bin]]
name = "day-08-part-2-paullgdc"
path = "./day-08/part-2/paullgdc.rs"

[[bin]]
name = "day-11-part-1-enizor"
path = "./day-11/part-1/enizor.rs"

[[bin]]
name = "day-11-part-2-enizor"
path = "./day-11/part-2/enizor.rs"

[[bin]]
name = "day-10-part-1-enizor"
path = "./day-10/part-1/enizor.rs"

[[bin]]
name = "day-10-part-2-enizor"
path = "./day-10/part-2/enizor.rs"

[[bin]]
name = "day-07-part-1-youyoun"
path = "./day-07/part-1/youyoun.rs"

[[bin]]
name = "day-07-part-2-youyoun"
path = "./day-07/part-2/youyoun.rs"

[[bin]]
name = "day-12-part-1-enizor"
path = "./day-12/part-1/enizor.rs"

[[bin]]
name = "day-12-part-2-enizor"
path = "./day-12/part-2/enizor.rs"

[[bin]]
name = "day-13-part-1-enizor"
path = "./day-13/part-1/enizor.rs"

[[bin]]
name = "day-13-part-2-enizor"
path = "./day-13/part-2/enizor.rs"

[[bin]]
name = "day-14-part-1-enizor"
path = "./day-14/part-1/enizor.rs"

[[bin]]
name = "day-14-part-2-enizor"
path = "./day-14/part-2/enizor.rs"

[[bin]]
name = "day-15-part-1-enizor"
path = "./day-15/part-1/enizor.rs"

[[bin]]
name = "day-15-part-2-enizor"
path = "./day-15/part-2/enizor.rs"

[[bin]]
name = "day-16-part-1-enizor"
path = "./day-16/part-1/enizor.rs"

[[bin]]
name = "day-16-part-2-enizor"
path = "./day-16/part-2/enizor.rs"

[[bin]]
name = "day-17-part-1-enizor"
path = "./day-17/part-1/enizor.rs"

[[bin]]
name = "day-17-part-2-enizor"
path = "./day-17/part-2/enizor.rs"

[[bin]]
name = "day-18-part-1-enizor"
path = "./day-18/part-1/enizor.rs"

[[bin]]
name = "day-18-part-2-enizor"
path = "./day-18/part-2/enizor.rs"

[[bin]]
name = "day-19-part-1-enizor"
path = "./day-19/part-1/enizor.rs"

[[bin]]
name = "day-19-part-2-enizor"
path = "./day-19/part-2/enizor.rs"

[[bin]]
name = "day-20-part-1-enizor"
path = "./day-20/part-1/enizor.rs"

[[bin]]
name = "day-20-part-2-enizor"
path = "./day-20/part-2/enizor.rs"

[[bin]]
name = "day-23-part-1-thomren"
path = "./day-23/part-1/thomren.rs"

[[bin]]
name = "day-23-part-2-thomren"
path = "./day-23/part-2/thomren.rs"
